--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 }
 
 body {
-  background-color: #f6f8f9;
+  background-color: lightgrey;
+  font-family: 'Arial', sans-serif;
 }
 
 /* HEADER */
@@ -27,9 +28,9 @@ header {
 }
 
 #logo-title {
-  font-family: 'Arimo', sans-serif;
+  
   font-size: 30px;
-  font-weight: 700;
+  font-weight: 800;
   vertical-align: middle;
 }
 
@@ -38,21 +39,24 @@ header {
 .container {
   width: 70%;
   margin: 0 auto;
+  background-color: white;
+  border-radius: 5px;
 }
 
 /* top nav */
 .top-nav {
-  background-color: white;
   margin-top: 40px;
   padding-top: 15px;
   padding-left: 50px;
   padding-bottom: 10px;
-
+ 
+  border-bottom: 2px solid lightgrey;
 }
 
 button {
   padding: 5px 5px;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .sky-color {
@@ -69,7 +73,6 @@ button {
 
 /* content */
 .content {
-  background-color: white;
   margin-top: 10px;
   padding-left: 50px;
   padding-bottom: 20px;
@@ -77,12 +80,12 @@ button {
 
 
 p {
-  font-family: 'Arimo', sans-serif;
   color: #444851;
 }
 
 .menu-title {
   padding-top: 35px;
+  font-weight: 600;
 }
 
 .menu-title::before {
@@ -106,13 +109,17 @@ p {
 }
 
 .item-true::before {
-  content: '\2714';
+  content: '\2713';
   font-size: 8px;
   color: #64c0a9;
   border: 1px solid #64c0a9;
   border-radius: 50%;
   padding: 3px;
   margin: 5px;
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  line-height: 5px;
   
 }
 
@@ -129,6 +136,10 @@ p {
   border-radius: 50%;
   padding: 3px;
   margin: 5px;
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  line-height: 5px;
   
 }
 
